--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,15 +45,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-//    implementation 'com.google.android.gms:play-services-ads:19.5.0'
+    implementation 'com.google.android.gms:play-services-ads:19.5.0'
     implementation 'com.android.support:multidex:1.0.3'
 //    implementation 'com.opensooq.supernova:gligar:1.1.0'
 //    implementation 'com.github.codekidX:storage-chooser:2.0.4.4'
     implementation 'com.kbeanie:multipicker:1.6@aar'
     implementation  'com.karumi:dexter:4.1.0'
 
-    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
-    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
     implementation 'com.arthenica:mobile-ffmpeg-full-gpl:4.4.LTS'
     implementation 'com.github.cdreamplayer:ProgressDialog:1.0.0'
     implementation 'com.github.koushikcse:LoadingButton:1.7'
